<resources>
    <string name="app_name">Landmines</string>
    <string name="action_settings">Settings</string>
    <string name="first_name_prompt">Name:</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="about_headline">About Landmines </string>
    <string name="title_activity_about">About Landmines Catalog</string>
    <string name="title_activity_detail">Description</string>
    <string name="title_activity_spec">Specifications</string>
    <string name="title_activity_specification">Specifications</string>
    <string name="title_activity_images">Images</string>
    <string name="title_activity_disposal">Disposal</string>

    <string name="no_data">No Data</string>

    // description
    <string name="description_label">Description</string>
    <string name="assemblies_label">Assemblies</string>
    <string name="methodOfOperation_label">Method of Operation</string>
    <string name="structure_label">Structure</string>
    <string name="markings_label">Markings</string>
    <string name="alert_label">Alert</string>

    <string name="description_textview">No data</string>
    <string name="assemblies_textview">No data</string>
    <string name="methodOfOperation_textview">No data</string>
    <string name="structure_textview">No data</string>
    <string name="markings_textview">No data</string>
    <string name="alert_textview">No data</string>


    // specification
    <string name="width_label">Width/Diameter(mm)</string>
    <string name="height_label">Height/Length(mm)</string>
    <string name="Weight_label">Weight(g)</string>
    <string name="metallic_weight_label">Metallic Weight</string>
    <string name="explosive_weight_label">Explosive Weight</string>
    <string name="frag_range_label">Frag Range</string>
    <string name="charge_weight_label">Charge Weight(g)</string>

    <string name="component_materials_label">Component Materials</string>
    <string name="case_materials_label">Case Materials</string>
    <string name="detectability_label">Detectability</string>
    <string name="explosive_label">Explosive</string>
    <string name="transport_label">Transport</string>
    <string name="hazard_label">Hazard</string>


    <string name="width_textview">No data</string>
    <string name="height_textview">No data</string>
    <string name="weight_textview">No data</string>
    <string name="metallic_weight_textview">No data</string>
    <string name="explosive_weight_textview">No data</string>
    <string name="frag_range_textview">No data</string>
    <string name="charge_weight_textview">No data</string>

    <string name="component_materials_textview">No data</string>
    <string name="case_materials_textview">No data</string>
    <string name="detectability_textview">No data</string>
    <string name="explosive_textview">No data</string>
    <string name="transport_textview">No data</string>
    <string name="hazard_textview">No data</string>
    <string name="title_activity_description">DescriptionActivity</string>


    // disposal
    <string name="neutralization_label">Neutralization</string>
    <string name="disarming_label">Disarming</string>
    <string name="placement_label">Placement</string>

    <string name="neutralization_textview">Neutralization</string>
    <string name="disarming_textview">Disarming</string>
    <string name="placement_textview">Placement</string>
    <string name="title_activity_full_image">Full Image</string>


    // Search search_title
    <string name="search_title">search</string>
    <string name="search_hint">enter search word</string>

    <string name="about_text">This application contains information derived from the Collaborative Ordnance Data Repository (CORD) which is hosted and
        managed by The Center for International Stabilization and Recovery at James Madison University.
        This application was developed by MAPPS, Inc. with support from the Unexploded Ordnance Center of Excellence (UXOCOE), Fort Belvoir, Virginia.
        And, while we strive for accuracy the information in this database is not guaranteed.</string>


    // list_item
    <string name="type_label">Type:</string>
    <string name="landmine_label">Landmine</string>
    <string name="country_of_origin_label">Country of Origin:</string>
    <string name="countries_used_in_label">Countries Used In:</string>
    <string name="landmine_name_textview">Landmine name</string>
    <string name="country_of_origin_textview">Country of Origin</string>
    <string name="countries_used_in_textview">Countries Used In</string>
    <string name="title_activity_help">HelpActivity</string>

</resources>
