<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mapps.landmines.DetailActivity">


    <TextView
        android:id="@+id/nameText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="Landmine name"
        android:textStyle="bold"
        android:textSize="@dimen/title_size"/>
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight = "1">

        <!-- -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:paddingTop="15dp"
                    android:text="@string/description_label"
                    android:textSize="@dimen/content_size"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/no_data"
                    android:textSize="@dimen/content_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/assemblies_label"
                    android:textSize="@dimen/content_size"/>

                <TextView
                    android:id="@+id/assemblies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:text="@string/no_data"
                    android:textSize="@dimen/content_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/methodOfOperation_label"
                    android:textSize="@dimen/content_size"/>

                <TextView
                    android:id="@+id/methodOfOperation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/no_data"
                    android:textSize="@dimen/content_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/structure_label"
                    android:textSize="@dimen/content_size"/>

                <TextView
                    android:id="@+id/structure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:text="@string/no_data"
                    android:textSize="@dimen/content_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/markings_label"
                    android:textSize="@dimen/content_size"/>

                <TextView
                    android:id="@+id/markings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/no_data"
                    android:textSize="@dimen/content_size"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/alert_label"
                    android:textSize="@dimen/content_size"/>

                <TextView
                    android:id="@+id/alert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="10dp"
                    android:text="@string/no_data"
                    android:textSize="@dimen/content_size"/>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/specsBtn"
        android:text="@string/title_activity_specification"
        android:textSize="@dimen/content_size"
        android:layout_marginBottom="1dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imagesBtn"
        android:text="@string/title_activity_images"
        android:textSize="@dimen/content_size"
        android:layout_marginBottom="1dp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/disposalBtn"
        android:text="@string/title_activity_disposal"
        android:textSize="@dimen/content_size"
        android:layout_marginBottom="1dp" />
    </LinearLayout>

</LinearLayout>